--- a/Store.Dicom/Store.DICOM.csproj
+++ b/Store.Dicom/Store.DICOM.csproj
@@ -720,12 +720,12 @@
     <Compile Include="Store\Dicom\Log\MetroLogManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\DICOM\Dictionaries\DICOM Dictionary.xml">
+    <EmbeddedResource Include="..\DICOM\Dictionaries\DICOM Dictionary.xml">
       <Link>Dictionaries\DICOM Dictionary.xml</Link>
-    </Content>
-    <Content Include="..\DICOM\Dictionaries\Private Dictionary.xml">
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\DICOM\Dictionaries\Private Dictionary.xml">
       <Link>Dictionaries\Private Dictionary.xml</Link>
-    </Content>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\DICOM\Dictionaries\DICOM Dictionary.xml.gz">
