--- a/DICOM/DICOM.csproj
+++ b/DICOM/DICOM.csproj
@@ -73,8 +73,14 @@
     <Compile Include="DicomDateRange.cs" />
     <Compile Include="DicomDictionary.cs" />
     <Compile Include="DicomDictionaryEntry.cs" />
+    <Compile Include="DicomDictionaryGenerated.cs" />
     <Compile Include="DicomDictionaryReader.cs" />
     <Compile Include="DicomFileExtensions.cs" />
+    <Compile Include="DicomUIDGenerated.cs" />
+    <Compile Include="Generators\DocBookParser\DataElementsTable.cs" />
+    <Compile Include="Generators\DocBookParser\DocBookTable.cs" />
+    <Compile Include="Generators\DocBookParser\Part6Parser.cs" />
+    <Compile Include="Generators\DocBookParser\UidTable.cs" />
     <Compile Include="Imaging\Mathematics\BitList.cs" />
     <Compile Include="Imaging\Mathematics\Histogram.cs" />
     <Compile Include="Imaging\Mathematics\MovingAverage.cs" />
@@ -110,7 +116,6 @@
     <Compile Include="DicomTagGenerated.cs" />
     <Compile Include="DicomTransferSyntax.cs" />
     <Compile Include="DicomUID.cs" />
-    <Compile Include="DicomUIDGenerated.cs" />
     <Compile Include="DicomUIDPrivate.cs" />
     <Compile Include="DicomVM.cs" />
     <Compile Include="DicomVR.cs" />
@@ -275,20 +280,18 @@
     <Compile Include="Threading\WorkQueue.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Dictionaries\DICOM Dictionary.xml.gz" />
     <EmbeddedResource Include="Dictionaries\Private Dictionary.xml.gz" />
     <None Include="fo-dicom.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dictionaries\DICOM Dictionary.xml" />
     <Content Include="Dictionaries\Private Dictionary.xml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.YearDayOfYear" BuildVersion_UseGlobalSettings="True" />
+      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_BuildVersioningStyle="None.None.Increment.YearDayOfYear" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
