--- a/Store.DICOM.Tests/Store.DICOM.Tests.csproj
+++ b/Store.DICOM.Tests/Store.DICOM.Tests.csproj
@@ -135,20 +135,20 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MetroLog, Version=0.8.6.0, Culture=neutral, PublicKeyToken=ba4ace74c3b410f3, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MetroLog.0.8.7.1\lib\win81\MetroLog.dll</HintPath>
+    <Reference Include="MetroLog, Version=0.8.8.0, Culture=neutral, PublicKeyToken=ba4ace74c3b410f3, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroLog.0.8.9\lib\win81\MetroLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MetroLog.Platform, Version=0.8.6.0, Culture=neutral, PublicKeyToken=ba4ace74c3b410f3, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MetroLog.0.8.7.1\lib\win81\MetroLog.Platform.dll</HintPath>
+    <Reference Include="MetroLog.Platform, Version=0.8.8.0, Culture=neutral, PublicKeyToken=ba4ace74c3b410f3, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroLog.0.8.9\lib\win81\MetroLog.Platform.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MetroLog.WinRT, Version=0.8.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MetroLog.0.8.7.1\lib\win81\MetroLog.WinRT.winmd</HintPath>
+    <Reference Include="MetroLog.WinRT, Version=0.8.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroLog.0.8.9\lib\win81\MetroLog.WinRT.winmd</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Shim">
-      <HintPath>..\packages\shim.1.0.1.50427\lib\netcore451\Shim.dll</HintPath>
+    <Reference Include="Shim, Version=1.0.1.0, Culture=neutral, PublicKeyToken=c55ec16d10c4b366, processorArchitecture=MSIL">
+      <HintPath>..\packages\shim.1.0.1.50804\lib\netcore451\Shim.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
